fix: dark mode on os darkmode

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -92,6 +92,7 @@ body {
   /* Generic */
   --main-font-color: #1a202c;
   --main-bgd-color: #f7fafc;
+  --header-bg-color: #ffffff;
   --selection-bgd-color: #0c344b;
   --white-color: #ffffff;
   --link-color: #3182ce;
@@ -135,6 +136,57 @@ body {
   word-wrap: break-word;
   color: var(--main-font-color);
   background-color: var(--white-color);
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    /* Generic */
+    --main-font-color: #e2e8f0;
+    --main-bgd-color: #1a202c;
+    --header-bg-color: #1a202c;
+    --selection-bgd-color: #0c344b;
+    --white-color: #ffffff;
+    --link-color: #7f9cf5;
+    --border-color: #e2e8f0;
+    --code-bgd-color: #2d3748;
+    --code-inline-bgd-color: #2d3748;
+    --list-bullet-color: #a0aec0;
+    --search-highlight-bg-color: #ebf8ff;
+    --tag-media-color: #2d3748;
+    --gradient1-color: #2f3747;
+    --gradient2-color: #0d0f14;
+    --header-btn-color: #4a5568;
+    /* Code blocks */
+    --code-inner-color: #718096;
+    --code-token1-color: #d5408c;
+    --code-token2-color: #805ad5;
+    --code-token3-color: #319795;
+    --code-token4-color: #dd6b21;
+    --code-token5-color: #690;
+    --code-token6-color: #9a6e3a;
+    --code-token7-color: #e90;
+    --code-linenum-color: #cbd5e0;
+    --code-added-color: #47bb78;
+    --code-added-bg-color: #d9f4e6;
+    --code-deleted-color: #e53e3e;
+    --code-deleted-bg-color: #f5e4e7;
+    --code-highlight-color: #a0aec0;
+    --code-highlight-bg-color: #e2e8f0;
+    --code-edit-bg-color: #c3dafe;
+    --code-result-bg-color: #e7edf3;
+    /* Buttons */
+    --red-color: #ff4f56;
+    --green-color: #15bd76;
+    --grey-color: #3d556b;
+    --grey-bg-color: #8fa6b2;
+    --dark-color: rgb(12, 52, 75);
+
+    color: var(--main-font-color);
+    background-color: var(--main-bgd-color);
+  }
+  .gatsby-resp-image-image {
+    box-shadow: none !important;
+  }
 }
 
 ::selection,
